--- a/core/docker-compose.test.yml
+++ b/core/docker-compose.test.yml
@@ -13,7 +13,7 @@ services:
             - ./dbscripts:/docker-entrypoint-initdb.d
 
     sut:
-        image: yzia2000/zims-classroom:test
+        image: yzia2000/foodie-api:test
         environment:
             - DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
         environment:
