--- a/core/package.json
+++ b/core/package.json
@@ -23,6 +23,7 @@
     "pg": "^8.5.1"
   },
   "devDependencies": {
+    "@glints/eslint-config": "^4.0.0",
     "@types/body-parser": "^1.19.0",
     "@types/cors": "^2.8.9",
     "@types/express": "^4.17.9",
