--- a/core/package.json
+++ b/core/package.json
@@ -20,7 +20,8 @@
     "express": "^4.17.1",
     "helmet": "^4.4.0",
     "jsonwebtoken": "^8.5.1",
-    "pg": "^8.5.1"
+    "pg": "^8.5.1",
+    "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
     "@glints/eslint-config": "^4.0.0",
@@ -31,6 +32,7 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/pg": "^7.14.7",
     "@types/supertest": "^2.0.10",
+    "@types/swagger-ui-express": "^4.1.2",
     "@typescript-eslint/eslint-plugin": "^4.14.0",
     "@typescript-eslint/parser": "^4.14.0",
     "eslint": "^7.18.0",
