--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "swagger": "^0.7.5",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
   },
