--- a/core/package.json
+++ b/core/package.json
@@ -21,6 +21,7 @@
     "helmet": "^4.4.0",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.5.1",
+    "swagger-jsdoc": "^6.0.6",
     "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
@@ -32,6 +33,7 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/pg": "^7.14.7",
     "@types/supertest": "^2.0.10",
+    "@types/swagger-jsdoc": "^6.0.0",
     "@types/swagger-ui-express": "^4.1.2",
     "@typescript-eslint/eslint-plugin": "^4.14.0",
     "@typescript-eslint/parser": "^4.14.0",
