--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,4 +42,4 @@ jobs:
           docker_build_args: |
             DATABASE_URL
         env:
-          DATABASE_URL=${{secrets.DATABASE_URL}}
+          DATABASE_URL: ${{secrets.DATABASE_URL}}
