--- a/core/docker-compose.prod.yml
+++ b/core/docker-compose.prod.yml
@@ -16,6 +16,7 @@ services:
         image: yzia2000/foodie-api:latest
         environment:
             - DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
+            - NODE_ENV=production
         build:
             context: .
         container_name: api
