--- a/core/docker-compose.debug.yml
+++ b/core/docker-compose.debug.yml
@@ -6,22 +6,31 @@ services:
             - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
             - POSTGRES_USER=${POSTGRES_USER}
             - POSTGRES_DB=${POSTGRES_DB}
-        container_name: db
+        container_name: db-debug
         ports: 
             - '5432:5432'
         volumes:
+            - dbdata:/var/lib/postgresql/data/
             - ./dbscripts:/docker-entrypoint-initdb.d
 
     api:
-        image: yzia2000/foodie-api:latest
+        image: yzia2000/foodie-api:debug
         environment:
             - DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
-            - NODE_ENV=production
         build:
             context: .
-        container_name: api
+            target: base
+        container_name: api-debug
+        command: npm run debug
+        volumes:
+            - ./src:/app/src
+            - ./dist:/app/dist
+            - ./package.json:/app/package.json
         depends_on:
             - db
         ports:
             - '5000:5000'
-            - '5858:5858'
+            - '9229:9229'
+
+volumes:
+    dbdata:
