--- a/core/package.json
+++ b/core/package.json
@@ -4,11 +4,19 @@
   "description": "Template API",
   "main": "server.js",
   "scripts": {
-    "dev": "nodemon --watch 'src/**' --ext 'ts,json' --ignore 'src/**/*.spec.ts' --exec 'ts-node src/server.ts'",
+    "watch": "tsc -w -p .",
+    "dev": "nodemon --watch 'src/**' --ext 'ts,json' --ignore 'src/**/*.spec.ts' src/server.ts",
     "start": "node ./dist/server.js",
     "build": "tsc -p .",
     "lint": "eslint src",
-    "test": "jest --collectCoverage --passWithNoTests --detectOpenHandles"
+    "test": "jest --collectCoverage --passWithNoTests --detectOpenHandles",
+    "debug": "nodemon --watch ./dist --inspect-brk=0.0.0.0:9229 --nolazy ./dist/server.js",
+    "debug:docker": "docker-compose -f docker-compose.debug.yml up --build",
+    "dev:docker": "docker-compose up --build",
+    "start:docker": "docker-compose -f docker-compose.prod.yml up --build",
+    "test:docker": "docker-compose -f docker-compose.test.yml up --build",
+    "lint:docker": "docker-compose -f docker-compose.test.yml run sut npm run lint",
+    "down": "docker-compose down --remove-orphans"
   },
   "keywords": [],
   "author": "Mohammad Yousuf Minhaj Zia",
@@ -31,6 +39,7 @@
     "@types/express": "^4.17.9",
     "@types/jest": "^26.0.20",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/node": "^14.14.31",
     "@types/pg": "^7.14.7",
     "@types/supertest": "^2.0.10",
     "@types/swagger-jsdoc": "^6.0.0",
